# OfficeMind-New

./: .env.example  .gitignore  DEPLOY_GUIDE.md  Dockerfile  JUDGING_POINTS.md  MEMORY.md  Makefile  PUSH_INSTRUCTIONS.md  README.md  demo.py  docker-compose.yml  model-router.md  pyproject.toml  requirements.txt  service-router.md
.agents/main/: agent.md
.nemoclaw/: config.json
config/: config.yaml
docs/: TROUBLESHOOTING.md  connect_dgx_spark.bat  connect_dgx_spark.ps1  windows-connect-guide.md
scripts/: bge_api.py  deploy.sh  deploy_gb10.sh  download_models.py  download_models.sh  fix_ollama_gpu.sh  restart_all.sh  serve_models.sh  serve_qwen3.sh  serve_vlm.sh  spark_setup.sh  start_all_services.sh  test_agent_qa.sh
services/: browser_operator.py  embedding_service.py  llm_service.py  officemind_agent.py  rag_document_qa.py  report_generator.py  vlm_screen_reader.py  vlm_service.py
skills/dev-doc-generator/: SKILL.md  index.js  package-lock.json  package.json
skills/dev-doc-generator/src/: doc-generator.js  doculator.js  index.js
skills/dev-doc-generator/src/pro/: index.js
skills/dev-doc-generator/src/pro/analyzers/: requirement-analyzer.js
skills/dev-doc-generator/src/pro/designers/: architecture-designer.js  (+1 more)
src/: __init__.py  officemind_app.py
src/agent/: orchestrator.py
src/api/: app.py  officemind_agent.py
src/browser/: operator.py
src/inference/: __init__.py  trtllm_engine.py
src/rag/: __init__.py  bge_retriever.py  pipeline.py
src/vision/: __init__.py  phash_filter.py  screen_reader.py
tools/: model-manager.sh  model-selector.sh
